--- a/output.css
+++ b/output.css
@@ -7,10 +7,29 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-amber-700: oklch(0.555 0.163 48.998);
+    --color-amber-50: oklch(0.987 0.022 95.277);
+    --color-amber-300: oklch(0.879 0.169 91.605);
+    --color-amber-500: oklch(0.769 0.188 70.08);
+    --color-blue-100: oklch(0.932 0.032 255.585);
+    --color-blue-200: oklch(0.882 0.059 254.128);
+    --color-blue-300: oklch(0.809 0.105 251.813);
+    --color-blue-400: oklch(0.707 0.165 254.624);
+    --color-blue-500: oklch(0.623 0.214 259.815);
+    --color-blue-700: oklch(0.488 0.243 264.376);
+    --color-blue-800: oklch(0.424 0.199 265.638);
+    --color-blue-900: oklch(0.379 0.146 265.522);
     --spacing: 0.25rem;
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
+    --font-weight-bold: 700;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -220,74 +239,47 @@
   .sticky {
     position: sticky;
   }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-1 {
-    bottom: calc(var(--spacing) * 1);
-  }
-  .bottom-2 {
-    bottom: calc(var(--spacing) * 2);
-  }
-  .bottom-5 {
-    bottom: calc(var(--spacing) * 5);
-  }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
-  }
-  .bottom-100 {
-    bottom: calc(var(--spacing) * 100);
+  .bottom-\[0px\] {
+    bottom: 0px;
   }
   .bottom-\[00px\] {
     bottom: 00px;
   }
-  .bottom-\[1\] {
-    bottom: 1;
-  }
-  .bottom-\[2\] {
-    bottom: 2;
-  }
-  .bottom-\[4-0px\] {
-    bottom: 4-0px;
-  }
-  .bottom-\[10\] {
-    bottom: 10;
-  }
   .bottom-\[20px\] {
     bottom: 20px;
   }
-  .bottom-\[25\] {
-    bottom: 25;
-  }
-  .bottom-\[40px\] {
-    bottom: 40px;
-  }
-  .bottom-\[100\] {
-    bottom: 100;
-  }
-  .bottom-\[100p\] {
-    bottom: 100p;
-  }
-  .bottom-\[100px\] {
-    bottom: 100px;
-  }
-  .bottom-\[250\] {
-    bottom: 250;
-  }
-  .bottom-\[250p\] {
-    bottom: 250p;
-  }
-  .bottom-\[250px\] {
-    bottom: 250px;
-  }
-  .bottom-\[400px\] {
-    bottom: 400px;
+  .bottom-\[70px\] {
+    bottom: 70px;
   }
   .bottom-\[600px\] {
     bottom: 600px;
   }
   .bottom-\[700px\] {
     bottom: 700px;
+  }
+  .bottom-\[710px\] {
+    bottom: 710px;
+  }
+  .bottom-\[720px\] {
+    bottom: 720px;
+  }
+  .bottom-\[730px\] {
+    bottom: 730px;
+  }
+  .bottom-\[740px\] {
+    bottom: 740px;
+  }
+  .bottom-\[750px\] {
+    bottom: 750px;
+  }
+  .bottom-\[800px\] {
+    bottom: 800px;
+  }
+  .bottom-\[900px\] {
+    bottom: 900px;
+  }
+  .bottom-\[7200px\] {
+    bottom: 7200px;
   }
   .isolate {
     isolation: isolate;
@@ -403,6 +395,84 @@
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
+  .mt-\[0px\] {
+    margin-top: 0px;
+  }
+  .mt-\[00px\] {
+    margin-top: 00px;
+  }
+  .mt-\[1\] {
+    margin-top: 1;
+  }
+  .mt-\[3px\] {
+    margin-top: 3px;
+  }
+  .mt-\[10\] {
+    margin-top: 10;
+  }
+  .mt-\[10px\] {
+    margin-top: 10px;
+  }
+  .mt-\[20px\] {
+    margin-top: 20px;
+  }
+  .mt-\[30px\] {
+    margin-top: 30px;
+  }
+  .mt-\[40px\] {
+    margin-top: 40px;
+  }
+  .mt-\[50px\] {
+    margin-top: 50px;
+  }
+  .mt-\[90px\] {
+    margin-top: 90px;
+  }
+  .mt-\[100\] {
+    margin-top: 100;
+  }
+  .mt-\[100p\] {
+    margin-top: 100p;
+  }
+  .mt-\[100px\] {
+    margin-top: 100px;
+  }
+  .mt-\[200px\] {
+    margin-top: 200px;
+  }
+  .mt-\[1200px\] {
+    margin-top: 1200px;
+  }
+  .mt-\[px\] {
+    margin-top: px;
+  }
+  .mt-\[x\] {
+    margin-top: x;
+  }
+  .mb-\[00px\] {
+    margin-bottom: 00px;
+  }
+  .mb-\[1\] {
+    margin-bottom: 1;
+  }
+  .mb-\[10\] {
+    margin-bottom: 10;
+  }
+  .mb-\[100\] {
+    margin-bottom: 100;
+  }
+  .mb-\[100p\] {
+    margin-bottom: 100p;
+  }
+  .mb-\[100px\] {
+    margin-bottom: 100px;
+  }
+  .mb-\[200px\] {
+    margin-bottom: 200px;
+  }
+  .mb-\[300px\] {
+    margin-bottom: 300px;
+  }
   .box-border {
     box-sizing: border-box;
   }
@@ -490,9 +560,6 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-full {
-    height: 100%;
-  }
   .h-screen {
     height: 100vh;
   }
@@ -501,9 +568,6 @@
   }
   .max-h-screen {
     max-height: 100vh;
-  }
-  .min-h-full {
-    min-height: 100%;
   }
   .min-h-screen {
     min-height: 100vh;
@@ -514,9 +578,6 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-full {
-    width: 100%;
-  }
   .w-screen {
     width: 100vw;
   }
@@ -525,9 +586,6 @@
   }
   .max-w-screen {
     max-width: 100vw;
-  }
-  .min-w-full {
-    min-width: 100%;
   }
   .min-w-screen {
     min-width: 100vw;
@@ -909,53 +967,24 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
-  }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
   }
-  .gap-\[2\] {
-    gap: 2;
+  .gap-9 {
+    gap: calc(var(--spacing) * 9);
   }
-  .gap-\[5rem\] {
-    gap: 5rem;
-  }
-  .gap-\[24px\] {
-    gap: 24px;
-  }
-  .gap-\[100px\] {
-    gap: 100px;
+  .gap-76 {
+    gap: calc(var(--spacing) * 76);
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 1;
-    }
-  }
-  .space-x-2 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
-    }
-  }
-  .space-x-3 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
   .space-x-reverse {
@@ -1170,8 +1199,14 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
-  .bg-amber-700 {
-    background-color: var(--color-amber-700);
+  .bg-amber-50 {
+    background-color: var(--color-amber-50);
+  }
+  .bg-amber-300 {
+    background-color: var(--color-amber-300);
+  }
+  .bg-amber-500 {
+    background-color: var(--color-amber-500);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1351,101 +1386,86 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
-  .pt-\[00px\] {
-    padding-top: 00px;
-  }
-  .pt-\[20px\] {
-    padding-top: 20px;
-  }
-  .pt-\[200px\] {
-    padding-top: 200px;
-  }
-  .pt-\[230px\] {
-    padding-top: 230px;
-  }
-  .pt-\[240px\] {
-    padding-top: 240px;
+  .pt-\[50px\] {
+    padding-top: 50px;
   }
   .pt-\[250px\] {
     padding-top: 250px;
   }
-  .pt-\[300px\] {
-    padding-top: 300px;
-  }
-  .pt-\[400px\] {
-    padding-top: 400px;
-  }
-  .pr-3 {
-    padding-right: calc(var(--spacing) * 3);
-  }
-  .pr-\[00px\] {
-    padding-right: 00px;
-  }
-  .pr-\[5\] {
-    padding-right: 5;
-  }
-  .pr-\[50\] {
-    padding-right: 50;
-  }
-  .pr-\[100px\] {
-    padding-right: 100px;
-  }
-  .pr-\[500\] {
-    padding-right: 500;
-  }
-  .pr-\[500p\] {
-    padding-right: 500p;
-  }
   .pr-\[500px\] {
     padding-right: 500px;
   }
-  .pr-\[5700px\] {
-    padding-right: 5700px;
+  .pb-\[1\] {
+    padding-bottom: 1;
   }
-  .pr-\[p\] {
-    padding-right: p;
+  .pb-\[10\] {
+    padding-bottom: 10;
+  }
+  .pb-\[100\] {
+    padding-bottom: 100;
+  }
+  .pb-\[100p\] {
+    padding-bottom: 100p;
+  }
+  .pb-\[100px\] {
+    padding-bottom: 100px;
+  }
+  .pb-\[100pz\] {
+    padding-bottom: 100pz;
   }
   .pl-\[0px\] {
     padding-left: 0px;
   }
-  .pl-\[5\] {
-    padding-left: 5;
+  .pl-\[4r0px\] {
+    padding-left: 4r0px;
+  }
+  .pl-\[10px\] {
+    padding-left: 10px;
+  }
+  .pl-\[20px\] {
+    padding-left: 20px;
   }
   .pl-\[40px\] {
     padding-left: 40px;
   }
-  .pl-\[50\] {
-    padding-left: 50;
-  }
   .pl-\[50px\] {
     padding-left: 50px;
   }
-  .pl-\[400px\] {
-    padding-left: 400px;
+  .pl-\[60px\] {
+    padding-left: 60px;
   }
-  .pl-\[410px\] {
-    padding-left: 410px;
+  .pl-\[70px\] {
+    padding-left: 70px;
+  }
+  .pl-\[80px\] {
+    padding-left: 80px;
+  }
+  .pl-\[90px\] {
+    padding-left: 90px;
+  }
+  .pl-\[100px\] {
+    padding-left: 100px;
+  }
+  .pl-\[140px\] {
+    padding-left: 140px;
+  }
+  .pl-\[150px\] {
+    padding-left: 150px;
+  }
+  .pl-\[200px\] {
+    padding-left: 200px;
+  }
+  .pl-\[220px\] {
+    padding-left: 220px;
+  }
+  .pl-\[320px\] {
+    padding-left: 320px;
   }
   .pl-\[420px\] {
     padding-left: 420px;
   }
-  .pl-\[450px\] {
-    padding-left: 450px;
-  }
-  .pl-\[500\] {
-    padding-left: 500;
-  }
-  .pl-\[500p\] {
-    padding-left: 500p;
-  }
-  .pl-\[500px\] {
-    padding-left: 500px;
+  .pl-\[900px\] {
+    padding-left: 900px;
   }
   .text-center {
     text-align: center;
@@ -1496,9 +1516,56 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-\[0px\] {
+    font-size: 0px;
+  }
+  .text-\[1px\] {
+    font-size: 1px;
+  }
+  .text-\[2px\] {
+    font-size: 2px;
+  }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
+  .text-\[15px\] {
+    font-size: 15px;
+  }
+  .text-\[20px\] {
+    font-size: 20px;
+  }
+  .text-\[25px\] {
+    font-size: 25px;
+  }
+  .text-\[30px\] {
+    font-size: 30px;
+  }
+  .text-\[50px\] {
+    font-size: 50px;
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
   }
   .text-balance {
     text-wrap: balance;
@@ -1572,6 +1639,60 @@
   }
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
+  }
+  .text-\[\#5\] {
+    color: #5;
+  }
+  .text-\[\#5b7\] {
+    color: #5b7;
+  }
+  .text-\[\#5b748d\] {
+    color: #5b748d;
+  }
+  .text-\[\#5b\] {
+    color: #5b;
+  }
+  .text-\[\#\] {
+    color: #;
+  }
+  .text-\[5\] {
+    color: 5;
+  }
+  .text-\[5b748d\] {
+    color: 5b748d;
+  }
+  .text-\[50\] {
+    color: 50;
+  }
+  .text-\[50p\] {
+    color: 50p;
+  }
+  .text-\[px\] {
+    color: px;
+  }
+  .text-blue-100 {
+    color: var(--color-blue-100);
+  }
+  .text-blue-200 {
+    color: var(--color-blue-200);
+  }
+  .text-blue-300 {
+    color: var(--color-blue-300);
+  }
+  .text-blue-400 {
+    color: var(--color-blue-400);
+  }
+  .text-blue-500 {
+    color: var(--color-blue-500);
+  }
+  .text-blue-700 {
+    color: var(--color-blue-700);
+  }
+  .text-blue-800 {
+    color: var(--color-blue-800);
+  }
+  .text-blue-900 {
+    color: var(--color-blue-900);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2114,6 +2235,10 @@
   initial-value: 0;
 }
 @property --tw-leading {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-font-weight {
   syntax: "*";
   inherits: false;
 }
