--- a/output.css
+++ b/output.css
@@ -7,18 +7,20 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-blue-50: oklch(0.97 0.014 254.604);
-    --color-blue-500: oklch(0.623 0.214 259.815);
     --color-blue-700: oklch(0.488 0.243 264.376);
+    --color-white: #fff;
     --spacing: 0.25rem;
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --font-weight-semibold: 600;
+    --font-weight-extralight: 200;
     --font-weight-bold: 700;
+    --tracking-wide: 0.025em;
+    --radius-lg: 0.5rem;
+    --radius-2xl: 1rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -228,182 +230,137 @@
   .sticky {
     position: sticky;
   }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
+  .top-\[\%\] {
+    top: %;
   }
-  .bottom-\[0px\] {
-    bottom: 0px;
+  .top-\[0\%\] {
+    top: 0%;
   }
-  .bottom-\[00px\] {
-    bottom: 00px;
+  .top-\[1\%\] {
+    top: 1%;
   }
-  .bottom-\[4\] {
-    bottom: 4;
+  .top-\[2\%\] {
+    top: 2%;
   }
-  .bottom-\[5px\] {
-    bottom: 5px;
+  .top-\[18\%\%\] {
+    top: 18%%;
   }
-  .bottom-\[6px\] {
-    bottom: 6px;
+  .top-\[18\%\] {
+    top: 18%;
   }
-  .bottom-\[10px\] {
-    bottom: 10px;
+  .top-\[20\%\] {
+    top: 20%;
   }
-  .bottom-\[20px\] {
-    bottom: 20px;
+  .top-\[20\.\%\] {
+    top: 20.%;
   }
-  .bottom-\[40\] {
-    bottom: 40;
+  .top-\[20\.5\%\] {
+    top: 20.5%;
   }
-  .bottom-\[40px\] {
-    bottom: 40px;
+  .top-\[30\%\] {
+    top: 30%;
   }
-  .bottom-\[50px\] {
-    bottom: 50px;
+  .top-\[40\%\] {
+    top: 40%;
   }
-  .bottom-\[58px\] {
-    bottom: 58px;
+  .top-\[50\%\] {
+    top: 50%;
   }
-  .bottom-\[60px\] {
-    bottom: 60px;
+  .right-\[\%\] {
+    right: %;
   }
-  .bottom-\[70px\] {
-    bottom: 70px;
+  .right-\[0\%\] {
+    right: 0%;
   }
-  .bottom-\[100px\] {
-    bottom: 100px;
+  .right-\[1\%\] {
+    right: 1%;
   }
-  .bottom-\[110px\] {
-    bottom: 110px;
+  .right-\[2\%\] {
+    right: 2%;
   }
-  .bottom-\[120px\] {
-    bottom: 120px;
+  .right-\[2\] {
+    right: 2;
   }
-  .bottom-\[130px\] {
-    bottom: 130px;
+  .right-\[5\%\] {
+    right: 5%;
+  }
+  .right-\[15\%\] {
+    right: 15%;
+  }
+  .right-\[21\%\] {
+    right: 21%;
+  }
+  .right-\[21\] {
+    right: 21;
+  }
+  .right-\[23\%\] {
+    right: 23%;
+  }
+  .right-\[24\%\] {
+    right: 24%;
+  }
+  .right-\[24\] {
+    right: 24;
+  }
+  .right-\[25\%\] {
+    right: 25%;
+  }
+  .right-\[26\%\] {
+    right: 26%;
+  }
+  .right-\[28\%\] {
+    right: 28%;
+  }
+  .right-\[29\%\] {
+    right: 29%;
+  }
+  .right-\[29\.\%\] {
+    right: 29.%;
+  }
+  .right-\[29\.5\%\] {
+    right: 29.5%;
+  }
+  .right-\[30\%\] {
+    right: 30%;
+  }
+  .right-\[241\] {
+    right: 241;
   }
   .bottom-\[150px\] {
     bottom: 150px;
   }
-  .bottom-\[160px\] {
-    bottom: 160px;
-  }
-  .bottom-\[180px\] {
-    bottom: 180px;
-  }
-  .bottom-\[200px\] {
-    bottom: 200px;
-  }
-  .bottom-\[210px\] {
-    bottom: 210px;
-  }
-  .bottom-\[220px\] {
-    bottom: 220px;
-  }
-  .bottom-\[250px\] {
-    bottom: 250px;
-  }
-  .bottom-\[280px\] {
-    bottom: 280px;
-  }
-  .bottom-\[300px\] {
-    bottom: 300px;
-  }
-  .bottom-\[400\] {
-    bottom: 400;
-  }
-  .bottom-\[400p\] {
-    bottom: 400p;
-  }
-  .bottom-\[400px\] {
-    bottom: 400px;
-  }
-  .bottom-\[450px\] {
-    bottom: 450px;
-  }
-  .bottom-\[500px\] {
-    bottom: 500px;
-  }
-  .bottom-\[520px\] {
-    bottom: 520px;
-  }
-  .bottom-\[540px\] {
-    bottom: 540px;
-  }
-  .bottom-\[550px\] {
-    bottom: 550px;
-  }
-  .bottom-\[560px\] {
-    bottom: 560px;
-  }
-  .bottom-\[570px\] {
-    bottom: 570px;
-  }
-  .bottom-\[580px\] {
-    bottom: 580px;
-  }
-  .bottom-\[590px\] {
-    bottom: 590px;
-  }
-  .bottom-\[600px\] {
-    bottom: 600px;
-  }
-  .bottom-\[610px\] {
-    bottom: 610px;
-  }
-  .bottom-\[620px\] {
-    bottom: 620px;
-  }
   .bottom-\[640px\] {
     bottom: 640px;
   }
-  .bottom-\[700px\] {
-    bottom: 700px;
-  }
-  .bottom-\[740px\] {
-    bottom: 740px;
-  }
-  .bottom-\[750px\] {
-    bottom: 750px;
-  }
-  .bottom-\[760px\] {
-    bottom: 760px;
-  }
-  .bottom-\[800px\] {
-    bottom: 800px;
-  }
-  .bottom-\[1600px\] {
-    bottom: 1600px;
-  }
-  .bottom-\[2000px\] {
-    bottom: 2000px;
-  }
-  .bottom-\[5400px\] {
-    bottom: 5400px;
-  }
-  .bottom-\[6100px\] {
-    bottom: 6100px;
-  }
-  .bottom-\[px\] {
-    bottom: px;
-  }
-  .left-5 {
-    left: calc(var(--spacing) * 5);
-  }
-  .left-\[5\] {
-    left: 5;
-  }
   .left-\[50\%\] {
     left: 50%;
-  }
-  .left-\[50\] {
-    left: 50;
   }
   .isolate {
     isolation: isolate;
   }
   .isolation-auto {
     isolation: auto;
+  }
+  .z-1 {
+    z-index: 1;
+  }
+  .z-10 {
+    z-index: 10;
+  }
+  .z-\[-1\] {
+    z-index: -1;
+  }
+  .z-\[-10\] {
+    z-index: -10;
+  }
+  .z-\[-10p\] {
+    z-index: -10p;
+  }
+  .z-\[-10px\] {
+    z-index: -10px;
+  }
+  .z-\[-\] {
+    z-index: -;
   }
   .z-auto {
     z-index: auto;
@@ -513,6 +470,27 @@
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-\[-1\] {
+    margin-top: -1;
+  }
+  .mt-\[-10\] {
+    margin-top: -10;
+  }
+  .mt-\[-100\] {
+    margin-top: -100;
+  }
+  .mt-\[-100p\] {
+    margin-top: -100p;
+  }
+  .mt-\[-100px\] {
+    margin-top: -100px;
+  }
+  .mt-\[-\] {
+    margin-top: -;
+  }
   .box-border {
     box-sizing: border-box;
   }
@@ -600,6 +578,33 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-\[0px\] {
+    height: 0px;
+  }
+  .h-\[1\] {
+    height: 1;
+  }
+  .h-\[10\] {
+    height: 10;
+  }
+  .h-\[10p\] {
+    height: 10p;
+  }
+  .h-\[10px\] {
+    height: 10px;
+  }
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[40px\] {
+    height: 40px;
+  }
+  .h-\[50px\] {
+    height: 50px;
+  }
+  .h-\[60px\] {
+    height: 60px;
+  }
   .h-screen {
     height: 100vh;
   }
@@ -618,53 +623,14 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-\[0px\] {
-    width: 0px;
-  }
-  .w-\[00px\] {
-    width: 00px;
-  }
-  .w-\[1\] {
-    width: 1;
-  }
-  .w-\[10\] {
-    width: 10;
-  }
-  .w-\[10p\] {
-    width: 10p;
-  }
-  .w-\[10px\] {
-    width: 10px;
-  }
-  .w-\[20px\] {
-    width: 20px;
-  }
-  .w-\[60px\] {
-    width: 60px;
-  }
-  .w-\[80px\] {
-    width: 80px;
-  }
-  .w-\[200px\] {
-    width: 200px;
-  }
   .w-\[300px\] {
     width: 300px;
   }
+  .w-\[600px\] {
+    width: 600px;
+  }
   .w-screen {
     width: 100vw;
-  }
-  .max-w-1 {
-    max-width: calc(var(--spacing) * 1);
-  }
-  .max-w-10 {
-    max-width: calc(var(--spacing) * 10);
   }
   .max-w-none {
     max-width: none;
@@ -674,9 +640,6 @@
   }
   .min-w-screen {
     min-width: 100vw;
-  }
-  .flex-2 {
-    flex: 2;
   }
   .flex-auto {
     flex: auto;
@@ -760,24 +723,12 @@
     --tw-translate-y: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-x-\[-5\] {
-    --tw-translate-x: -5;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-50\%\$\] {
-    --tw-translate-x: -50%$;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-x-\[-50\] {
-    --tw-translate-x: -50;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-\] {
-    --tw-translate-x: -;
+  .translate-y-\[-50\%\] {
+    --tw-translate-y: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-3d {
@@ -1078,104 +1029,17 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
-  }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
-  }
-  .gap-5 {
-    gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-7 {
-    gap: calc(var(--spacing) * 7);
-  }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
-  }
-  .gap-34 {
-    gap: calc(var(--spacing) * 34);
-  }
-  .gap-200 {
-    gap: calc(var(--spacing) * 200);
-  }
-  .gap-\[0px\] {
-    gap: 0px;
-  }
-  .gap-\[00px\] {
-    gap: 00px;
-  }
-  .gap-\[1\] {
-    gap: 1;
-  }
-  .gap-\[2\] {
-    gap: 2;
-  }
-  .gap-\[10\] {
-    gap: 10;
-  }
-  .gap-\[10px\] {
-    gap: 10px;
-  }
-  .gap-\[20\] {
-    gap: 20;
-  }
-  .gap-\[20p\] {
-    gap: 20p;
-  }
-  .gap-\[20px\] {
-    gap: 20px;
-  }
-  .gap-\[40px\] {
-    gap: 40px;
-  }
   .gap-\[50px\] {
     gap: 50px;
   }
-  .gap-\[70px\] {
-    gap: 70px;
-  }
-  .gap-\[90px\] {
-    gap: 90px;
-  }
-  .gap-\[100\] {
-    gap: 100;
-  }
-  .gap-\[100p\] {
-    gap: 100p;
-  }
   .gap-\[100px\] {
     gap: 100px;
-  }
-  .gap-\[200\] {
-    gap: 200;
-  }
-  .gap-\[200p\] {
-    gap: 200p;
-  }
-  .gap-\[200px\] {
-    gap: 200px;
-  }
-  .gap-\[300px\] {
-    gap: 300px;
-  }
-  .gap-\[400px\] {
-    gap: 400px;
-  }
-  .gap-\[500px\] {
-    gap: 500px;
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1271,8 +1135,95 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
+  .rounded-\[0px\] {
+    border-radius: 0px;
+  }
+  .rounded-\[1\] {
+    border-radius: 1;
+  }
+  .rounded-\[1px\] {
+    border-radius: 1px;
+  }
+  .rounded-\[2\] {
+    border-radius: 2;
+  }
+  .rounded-\[2px\] {
+    border-radius: 2px;
+  }
+  .rounded-\[6px\] {
+    border-radius: 6px;
+  }
+  .rounded-\[8px\] {
+    border-radius: 8px;
+  }
+  .rounded-\[10\] {
+    border-radius: 10;
+  }
+  .rounded-\[10px\] {
+    border-radius: 10px;
+  }
+  .rounded-\[12px\] {
+    border-radius: 12px;
+  }
+  .rounded-\[16px\] {
+    border-radius: 16px;
+  }
+  .rounded-\[20px\] {
+    border-radius: 20px;
+  }
+  .rounded-\[25\] {
+    border-radius: 25;
+  }
+  .rounded-\[25p\] {
+    border-radius: 25p;
+  }
+  .rounded-\[25px\] {
+    border-radius: 25px;
+  }
+  .rounded-\[30px\] {
+    border-radius: 30px;
+  }
+  .rounded-\[50px\] {
+    border-radius: 50px;
+  }
+  .rounded-\[60px\] {
+    border-radius: 60px;
+  }
+  .rounded-\[80px\] {
+    border-radius: 80px;
+  }
+  .rounded-\[100\] {
+    border-radius: 100;
+  }
+  .rounded-\[100p\] {
+    border-radius: 100p;
+  }
+  .rounded-\[100px\] {
+    border-radius: 100px;
+  }
+  .rounded-\[100pz\] {
+    border-radius: 100pz;
+  }
+  .rounded-\[120px\] {
+    border-radius: 120px;
+  }
+  .rounded-\[250px\] {
+    border-radius: 250px;
+  }
+  .rounded-\[255px\] {
+    border-radius: 255px;
+  }
+  .rounded-\[px\] {
+    border-radius: px;
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
   }
   .rounded-s {
     border-start-start-radius: 0.25rem;
@@ -1388,8 +1339,14 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#0079ff\] {
+    background-color: #0079ff;
+  }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
+  }
+  .bg-\[\#f6f8ff\] {
+    background-color: #f6f8ff;
   }
   .bg-\[color\:var\(--my-color\)\] {
     background-color: var(--my-color);
@@ -1405,6 +1362,12 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
+  }
+  .bg-transparent {
+    background-color: transparent;
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1575,44 +1538,116 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
-  .p-\[80px\] {
-    padding: 80px;
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
-  .pt-\[0px\] {
-    padding-top: 0px;
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
+  }
+  .p-\[40px\] {
+    padding: 40px;
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
+  .py-0\.5 {
+    padding-block: calc(var(--spacing) * 0.5);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
+  }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
   }
   .pt-\[10px\] {
     padding-top: 10px;
   }
-  .pt-\[20px\] {
-    padding-top: 20px;
-  }
   .pt-\[50px\] {
     padding-top: 50px;
   }
-  .pt-\[80px\] {
-    padding-top: 80px;
+  .pt-\[160px\] {
+    padding-top: 160px;
+  }
+  .pt-\[170px\] {
+    padding-top: 170px;
   }
   .pt-\[180px\] {
     padding-top: 180px;
   }
-  .pt-\[200px\] {
-    padding-top: 200px;
+  .pr-\[0px\] {
+    padding-right: 0px;
   }
-  .pt-\[250px\] {
-    padding-top: 250px;
+  .pr-\[40px\] {
+    padding-right: 40px;
   }
-  .pt-\[1800px\] {
-    padding-top: 1800px;
+  .pr-\[50px\] {
+    padding-right: 50px;
   }
-  .pr-\[00px\] {
-    padding-right: 00px;
+  .pr-\[54px\] {
+    padding-right: 54px;
   }
-  .pr-\[400px\] {
-    padding-right: 400px;
+  .pr-\[480px\] {
+    padding-right: 480px;
   }
   .pr-\[500px\] {
     padding-right: 500px;
+  }
+  .pr-\[510px\] {
+    padding-right: 510px;
+  }
+  .pr-\[520px\] {
+    padding-right: 520px;
+  }
+  .pr-\[530px\] {
+    padding-right: 530px;
+  }
+  .pr-\[540px\] {
+    padding-right: 540px;
+  }
+  .pr-\[541px\] {
+    padding-right: 541px;
+  }
+  .pr-\[542px\] {
+    padding-right: 542px;
+  }
+  .pr-\[545px\] {
+    padding-right: 545px;
+  }
+  .pr-\[550px\] {
+    padding-right: 550px;
   }
   .pb-1 {
     padding-bottom: calc(var(--spacing) * 1);
@@ -1620,89 +1655,38 @@
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
   }
-  .pb-100 {
-    padding-bottom: calc(var(--spacing) * 100);
-  }
-  .pb-\[0px\] {
-    padding-bottom: 0px;
-  }
-  .pb-\[00px\] {
-    padding-bottom: 00px;
-  }
-  .pb-\[1\] {
-    padding-bottom: 1;
-  }
-  .pb-\[2\] {
-    padding-bottom: 2;
-  }
-  .pb-\[5\] {
-    padding-bottom: 5;
-  }
-  .pb-\[5p\] {
-    padding-bottom: 5p;
-  }
   .pb-\[5px\] {
     padding-bottom: 5px;
-  }
-  .pb-\[10\] {
-    padding-bottom: 10;
-  }
-  .pb-\[10p\] {
-    padding-bottom: 10p;
-  }
-  .pb-\[10px\] {
-    padding-bottom: 10px;
-  }
-  .pb-\[20\] {
-    padding-bottom: 20;
-  }
-  .pb-\[20p\] {
-    padding-bottom: 20p;
-  }
-  .pb-\[20px\] {
-    padding-bottom: 20px;
   }
   .pb-\[30px\] {
     padding-bottom: 30px;
   }
-  .pb-\[40px\] {
-    padding-bottom: 40px;
-  }
-  .pb-\[50\] {
-    padding-bottom: 50;
-  }
-  .pb-\[50p\] {
-    padding-bottom: 50p;
-  }
-  .pb-\[50px\] {
-    padding-bottom: 50px;
-  }
-  .pb-\[70px\] {
-    padding-bottom: 70px;
-  }
-  .pb-\[80px\] {
-    padding-bottom: 80px;
-  }
   .pb-\[90px\] {
     padding-bottom: 90px;
   }
-  .pb-\[200\] {
-    padding-bottom: 200;
+  .pl-\[3px\] {
+    padding-left: 3px;
   }
-  .pb-\[200p\] {
-    padding-bottom: 200p;
+  .pl-\[4px\] {
+    padding-left: 4px;
   }
-  .pb-\[200px\] {
-    padding-bottom: 200px;
+  .pl-\[30px\] {
+    padding-left: 30px;
   }
-  .pb-\[400px\] {
-    padding-bottom: 400px;
+  .pl-\[35px\] {
+    padding-left: 35px;
   }
-  .pb-\[600px\] {
-    padding-bottom: 600px;
+  .pl-\[40ppx\] {
+    padding-left: 40ppx;
   }
-  .pl-\[80px\] {
-    padding-left: 80px;
+  .pl-\[40px\] {
+    padding-left: 40px;
+  }
+  .pl-\[40pxpx\] {
+    padding-left: 40pxpx;
+  }
+  .pl-\[px\] {
+    padding-left: px;
   }
   .text-center {
     text-align: center;
@@ -1753,16 +1737,22 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
   }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[20px\] {
-    font-size: 20px;
+  .text-\[13px\] {
+    font-size: 13px;
+  }
+  .text-\[15px\] {
+    font-size: 15px;
+  }
+  .text-\[26px\] {
+    font-size: 26px;
   }
   .leading-none {
     --tw-leading: 1;
@@ -1772,9 +1762,17 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .font-semibold {
-    --tw-font-weight: var(--font-weight-semibold);
-    font-weight: var(--font-weight-semibold);
+  .font-extralight {
+    --tw-font-weight: var(--font-weight-extralight);
+    font-weight: var(--font-weight-extralight);
+  }
+  .tracking-\[2\.5px\] {
+    --tw-tracking: 2.5px;
+    letter-spacing: 2.5px;
+  }
+  .tracking-wide {
+    --tw-tracking: var(--tracking-wide);
+    letter-spacing: var(--tracking-wide);
   }
   .text-balance {
     text-wrap: balance;
@@ -1849,17 +1847,17 @@
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
   }
-  .text-\[\#5b748d\] {
-    color: #5b748d;
+  .text-\[\#4b6a9b\] {
+    color: #4b6a9b;
   }
-  .text-blue-50 {
-    color: var(--color-blue-50);
-  }
-  .text-blue-500 {
-    color: var(--color-blue-500);
+  .text-\[\#0079ff\] {
+    color: #0079ff;
   }
   .text-blue-700 {
     color: var(--color-blue-700);
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2014,6 +2012,10 @@
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .ring {
@@ -2406,6 +2408,10 @@
   inherits: false;
 }
 @property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
   syntax: "*";
   inherits: false;
 }
